fixing text alignment

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="col-sm-12">
           <div class="panel panel-default">
-            <div id="root" class="panel-body"></div>
+            <div id="root" class="panel-body text-left"></div>
           </div>
         </div>
       </div>
